MarkdownParser.py
# Generated from MarkdownParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MarkdownParser ( Parser ):

    grammarFileName = "MarkdownParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'**'", "<INVALID>", 
                     "<INVALID>", "'*'", "'`'", "'>'", "'~~'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "'('", "')'", 
                     "'!'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'```'" ]

    symbolicNames = [ "<INVALID>", "HEADING6", "HEADING5", "HEADING4", "HEADING3", 
                      "HEADING2", "HEADING1", "BOLD", "UNORDERED_LIST_MARKER", 
                      "ORDERED_LIST_MARKER", "ITALIC", "BACKTICK", "BLOCKQUOTE", 
                      "STRIKETHROUGH", "NEWLINE", "SPACE", "SPACESKIP", 
                      "LINK_OPEN", "LINK_CLOSE", "LINK_HREF_OPEN", "LINK_HREF_CLOSE", 
                      "IMAGE", "BREAKLINE", "TEXT", "TRIPLE_BACKTICK", "CODE_BLOCK_CONTENT", 
                      "CODE_BLOCK_END" ]

    RULE_document = 0
    RULE_block = 1
    RULE_heading1 = 2
    RULE_heading2 = 3
    RULE_heading3 = 4
    RULE_heading4 = 5
    RULE_heading5 = 6
    RULE_heading6 = 7
    RULE_inlineElement = 8
    RULE_inlineElementNoItalic = 9
    RULE_inlineElementNoBold = 10
    RULE_inlineElementNoStrikethrough = 11
    RULE_inlineElementNoLink = 12
    RULE_inlineListElement = 13
    RULE_boldText = 14
    RULE_italicText = 15
    RULE_strikethroughText = 16
    RULE_link = 17
    RULE_linkText = 18
    RULE_image = 19
    RULE_codeSpan = 20
    RULE_paragraph = 21
    RULE_inlineContentLine = 22
    RULE_codeBlock = 23
    RULE_unorderedList = 24
    RULE_orderedList = 25
    RULE_unorderedListItem = 26
    RULE_orderedListItem = 27
    RULE_blockquote = 28
    RULE_breakline = 29
    RULE_text = 30

    ruleNames =  [ "document", "block", "heading1", "heading2", "heading3", 
                   "heading4", "heading5", "heading6", "inlineElement", 
                   "inlineElementNoItalic", "inlineElementNoBold", "inlineElementNoStrikethrough", 
                   "inlineElementNoLink", "inlineListElement", "boldText", 
                   "italicText", "strikethroughText", "link", "linkText", 
                   "image", "codeSpan", "paragraph", "inlineContentLine", 
                   "codeBlock", "unorderedList", "orderedList", "unorderedListItem", 
                   "orderedListItem", "blockquote", "breakline", "text" ]

    EOF = Token.EOF
    HEADING6=1
    HEADING5=2
    HEADING4=3
    HEADING3=4
    HEADING2=5
    HEADING1=6
    BOLD=7
    UNORDERED_LIST_MARKER=8
    ORDERED_LIST_MARKER=9
    ITALIC=10
    BACKTICK=11
    BLOCKQUOTE=12
    STRIKETHROUGH=13
    NEWLINE=14
    SPACE=15
    SPACESKIP=16
    LINK_OPEN=17
    LINK_CLOSE=18
    LINK_HREF_OPEN=19
    LINK_HREF_CLOSE=20
    IMAGE=21
    BREAKLINE=22
    TEXT=23
    TRIPLE_BACKTICK=24
    CODE_BLOCK_CONTENT=25
    CODE_BLOCK_END=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MarkdownParser.EOF, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.BlockContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.BlockContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = MarkdownParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 31653886) != 0):
                self.state = 62
                self.block()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(MarkdownParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def heading1(self):
            return self.getTypedRuleContext(MarkdownParser.Heading1Context,0)


        def heading2(self):
            return self.getTypedRuleContext(MarkdownParser.Heading2Context,0)


        def heading3(self):
            return self.getTypedRuleContext(MarkdownParser.Heading3Context,0)


        def heading4(self):
            return self.getTypedRuleContext(MarkdownParser.Heading4Context,0)


        def heading5(self):
            return self.getTypedRuleContext(MarkdownParser.Heading5Context,0)


        def heading6(self):
            return self.getTypedRuleContext(MarkdownParser.Heading6Context,0)


        def codeBlock(self):
            return self.getTypedRuleContext(MarkdownParser.CodeBlockContext,0)


        def unorderedList(self):
            return self.getTypedRuleContext(MarkdownParser.UnorderedListContext,0)


        def orderedList(self):
            return self.getTypedRuleContext(MarkdownParser.OrderedListContext,0)


        def blockquote(self):
            return self.getTypedRuleContext(MarkdownParser.BlockquoteContext,0)


        def paragraph(self):
            return self.getTypedRuleContext(MarkdownParser.ParagraphContext,0)


        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MarkdownParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MarkdownParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.heading1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.heading2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.heading3()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.heading4()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.heading5()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.heading6()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.codeBlock()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.unorderedList()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 78
                self.orderedList()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 79
                self.blockquote()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 80
                self.paragraph()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 81
                self.match(MarkdownParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Heading1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADING1(self):
            return self.getToken(MarkdownParser.HEADING1, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.SPACE)
            else:
                return self.getToken(MarkdownParser.SPACE, i)

        def inlineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.InlineElementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.InlineElementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading1" ):
                listener.enterHeading1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading1" ):
                listener.exitHeading1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading1" ):
                return visitor.visitHeading1(self)
            else:
                return visitor.visitChildren(self)




    def heading1(self):

        localctx = MarkdownParser.Heading1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_heading1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 84
                self.match(MarkdownParser.SPACE)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(MarkdownParser.HEADING1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14855296) != 0):
                self.state = 91
                self.inlineElement()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Heading2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADING2(self):
            return self.getToken(MarkdownParser.HEADING2, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.SPACE)
            else:
                return self.getToken(MarkdownParser.SPACE, i)

        def inlineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.InlineElementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.InlineElementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading2" ):
                listener.enterHeading2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading2" ):
                listener.exitHeading2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading2" ):
                return visitor.visitHeading2(self)
            else:
                return visitor.visitChildren(self)




    def heading2(self):

        localctx = MarkdownParser.Heading2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_heading2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 99
                self.match(MarkdownParser.SPACE)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(MarkdownParser.HEADING2)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14855296) != 0):
                self.state = 106
                self.inlineElement()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Heading3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADING3(self):
            return self.getToken(MarkdownParser.HEADING3, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.SPACE)
            else:
                return self.getToken(MarkdownParser.SPACE, i)

        def inlineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.InlineElementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.InlineElementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading3" ):
                listener.enterHeading3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading3" ):
                listener.exitHeading3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading3" ):
                return visitor.visitHeading3(self)
            else:
                return visitor.visitChildren(self)




    def heading3(self):

        localctx = MarkdownParser.Heading3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_heading3)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 114
                self.match(MarkdownParser.SPACE)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(MarkdownParser.HEADING3)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14855296) != 0):
                self.state = 121
                self.inlineElement()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Heading4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADING4(self):
            return self.getToken(MarkdownParser.HEADING4, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.SPACE)
            else:
                return self.getToken(MarkdownParser.SPACE, i)

        def inlineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.InlineElementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.InlineElementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading4" ):
                listener.enterHeading4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading4" ):
                listener.exitHeading4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading4" ):
                return visitor.visitHeading4(self)
            else:
                return visitor.visitChildren(self)




    def heading4(self):

        localctx = MarkdownParser.Heading4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_heading4)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 129
                self.match(MarkdownParser.SPACE)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(MarkdownParser.HEADING4)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14855296) != 0):
                self.state = 136
                self.inlineElement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Heading5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADING5(self):
            return self.getToken(MarkdownParser.HEADING5, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.SPACE)
            else:
                return self.getToken(MarkdownParser.SPACE, i)

        def inlineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.InlineElementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.InlineElementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading5" ):
                listener.enterHeading5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading5" ):
                listener.exitHeading5(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading5" ):
                return visitor.visitHeading5(self)
            else:
                return visitor.visitChildren(self)




    def heading5(self):

        localctx = MarkdownParser.Heading5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_heading5)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 144
                self.match(MarkdownParser.SPACE)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(MarkdownParser.HEADING5)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14855296) != 0):
                self.state = 151
                self.inlineElement()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Heading6Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADING6(self):
            return self.getToken(MarkdownParser.HEADING6, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.SPACE)
            else:
                return self.getToken(MarkdownParser.SPACE, i)

        def inlineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.InlineElementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.InlineElementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading6

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading6" ):
                listener.enterHeading6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading6" ):
                listener.exitHeading6(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading6" ):
                return visitor.visitHeading6(self)
            else:
                return visitor.visitChildren(self)




    def heading6(self):

        localctx = MarkdownParser.Heading6Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_heading6)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 159
                self.match(MarkdownParser.SPACE)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(MarkdownParser.HEADING6)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14855296) != 0):
                self.state = 166
                self.inlineElement()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boldText(self):
            return self.getTypedRuleContext(MarkdownParser.BoldTextContext,0)


        def italicText(self):
            return self.getTypedRuleContext(MarkdownParser.ItalicTextContext,0)


        def strikethroughText(self):
            return self.getTypedRuleContext(MarkdownParser.StrikethroughTextContext,0)


        def link(self):
            return self.getTypedRuleContext(MarkdownParser.LinkContext,0)


        def image(self):
            return self.getTypedRuleContext(MarkdownParser.ImageContext,0)


        def codeSpan(self):
            return self.getTypedRuleContext(MarkdownParser.CodeSpanContext,0)


        def breakline(self):
            return self.getTypedRuleContext(MarkdownParser.BreaklineContext,0)


        def text(self):
            return self.getTypedRuleContext(MarkdownParser.TextContext,0)


        def SPACE(self):
            return self.getToken(MarkdownParser.SPACE, 0)

        def getRuleIndex(self):
            return MarkdownParser.RULE_inlineElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineElement" ):
                listener.enterInlineElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineElement" ):
                listener.exitInlineElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineElement" ):
                return visitor.visitInlineElement(self)
            else:
                return visitor.visitChildren(self)




    def inlineElement(self):

        localctx = MarkdownParser.InlineElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_inlineElement)
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.boldText()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.italicText()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.strikethroughText()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 177
                self.link()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 178
                self.image()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 179
                self.codeSpan()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 7)
                self.state = 180
                self.breakline()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 8)
                self.state = 181
                self.text()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 9)
                self.state = 182
                self.match(MarkdownParser.SPACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineElementNoItalicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boldText(self):
            return self.getTypedRuleContext(MarkdownParser.BoldTextContext,0)


        def strikethroughText(self):
            return self.getTypedRuleContext(MarkdownParser.StrikethroughTextContext,0)


        def linkText(self):
            return self.getTypedRuleContext(MarkdownParser.LinkTextContext,0)


        def text(self):
            return self.getTypedRuleContext(MarkdownParser.TextContext,0)


        def getRuleIndex(self):
            return MarkdownParser.RULE_inlineElementNoItalic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineElementNoItalic" ):
                listener.enterInlineElementNoItalic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineElementNoItalic" ):
                listener.exitInlineElementNoItalic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineElementNoItalic" ):
                return visitor.visitInlineElementNoItalic(self)
            else:
                return visitor.visitChildren(self)




    def inlineElementNoItalic(self):

        localctx = MarkdownParser.InlineElementNoItalicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_inlineElementNoItalic)
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.boldText()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.strikethroughText()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 187
                self.linkText()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 188
                self.text()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineElementNoBoldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def italicText(self):
            return self.getTypedRuleContext(MarkdownParser.ItalicTextContext,0)


        def strikethroughText(self):
            return self.getTypedRuleContext(MarkdownParser.StrikethroughTextContext,0)


        def linkText(self):
            return self.getTypedRuleContext(MarkdownParser.LinkTextContext,0)


        def text(self):
            return self.getTypedRuleContext(MarkdownParser.TextContext,0)


        def getRuleIndex(self):
            return MarkdownParser.RULE_inlineElementNoBold

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineElementNoBold" ):
                listener.enterInlineElementNoBold(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineElementNoBold" ):
                listener.exitInlineElementNoBold(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineElementNoBold" ):
                return visitor.visitInlineElementNoBold(self)
            else:
                return visitor.visitChildren(self)




    def inlineElementNoBold(self):
